@@ -1,3 +1,7 @@
+2022-03-04  Simon Marchi  <simon.marchi@polymtl.ca>
+
+	* readelf.c (process_dynamic_section): Fix indentation.
+
 2022-02-09  Nick Clifton  <nickc@redhat.com>
 
 	* README-how-to-make-a-release: Update after the 2.38 release.
